--- a/docs/final_report/header.sty
+++ b/docs/final_report/header.sty
@@ -22,6 +22,8 @@ footskip=1cm,headheight=14.599pt]{geometry}
 \usepackage{float}
 \usepackage{enumitem}
 \usepackage{svg}
+\usepackage{longtable}
+\usepackage{rotating}
 
 \usepackage{booktabs}
 \usepackage{xcolor}
