--- a/docs/final_report/main.tex
+++ b/docs/final_report/main.tex
@@ -19,7 +19,7 @@
     
     {\Large Sven Fuchs, Joshua Reichmann\par}
     \vspace{0.5cm}
-    {\Large 07.03.2024\par}
+    {\Large 2024, March 4\par}
     
     \vfill
 \end{titlepage}
@@ -36,12 +36,13 @@
 \import{sections/}{signal_processing.tex}
 \import{sections/}{acf_peak.tex}
 \import{sections/}{testing.tex}
+\import{sections/}{dwt.tex}
 \import{sections/}{conclusion.tex}
 \import{sections/}{appendices.tex}
 
 \newpage
 \printbibliography
 \listoffigures
-%\listoftables
+\listoftables
 
 \end{document}
