--- a/docs/final_report/sections/appendices.tex
+++ b/docs/final_report/sections/appendices.tex
@@ -6,10 +6,6 @@
 \lstinputlisting[style=MatlabStyle]{../../src/rhythmic_inside/main.m}
 \newpage
 
-\texttt{preprocess.m:}
-\lstinputlisting[style=MatlabStyle]{../../src/rhythmic_inside/preprocess.m}
-\newpage
-
 \texttt{calculateEnergy.m:}
 \lstinputlisting[style=MatlabStyle]{../../src/rhythmic_inside/calculateEnergy.m}
 \newpage
@@ -28,9 +24,30 @@
 
 \texttt{config.m:}
 \lstinputlisting[style=MatlabStyle]{../../src/rhythmic_inside/config.m}
+\newpage
+
+\texttt{customFilter.m:}
+\lstinputlisting[style=MatlabStyle]{../../src/rhythmic_inside/customFilter.m}
+\newpage
+
+\texttt{processSignalForBPM.m:}
+\lstinputlisting[style=MatlabStyle]{../../src/rhythmic_inside/processSignalForBPM.m}
+\newpage
+
+\texttt{recursiveFilter.m:}
+\lstinputlisting[style=MatlabStyle]{../../src/rhythmic_inside/recursiveFilter.m}
+\newpage
+
+\texttt{selectWAV.m:}
+\lstinputlisting[style=MatlabStyle]{../../src/rhythmic_inside/selectWAV.m}
+\newpage
 
 \subsection{Appendix B: References}
 
-404 -\_- \\
-
-TODO: Add references (mark hills, octave documentation, etc.)
+\begin{enumerate}
+    \item Octave Documentation. (2024, March 4). Retrieved from \\ https://docs.octave.org/latest/
+    \item SongBPM. (2024, March 4). Retrieved from \\ https://songbpm.com/
+    \item Hills, M. (2024, March 1). BPM-Tools. Retrieved from \\ https://www.pogo.org.uk/~mark/bpm-tools/
+    \item TIDAL. (2024, February 27). Top 100 Deutschland. Retrieved from \\ https://tidal.com/browse/playlist/56c28e48-5d09-4fb0-812e-c6c7c6647dcf
+    \item Müller, M. (2024, February 28). Tempogram and Autocorrelation. Retrieved from \\ https://www.audiolabs-erlangen.de/resources/MIR/FMP/C6/ \\ C6S2\_TempogramAutocorrelation.html
+\end{enumerate}
